syntax = "proto3";

option go_package = "protogen/";

import "internal/proto/log.proto";



service ServerPilot {
  rpc GetLogStream(LogRequest) returns (stream LogResponse);  
}