syntax = "proto3";

option go_package = "protogen/";


message LogRequest {

}

message LogResponse {
  string log = 1;
}

